y.output
Terminals unused in grammar

   LPARENTHESIS
   RPARENTHESIS
   COMMA
   COLON
   SEMICOLON
   LBRACKET
   RBRACKET
   LBRACE
   RBRACE
   CASE
   CLOSE
   CONTINUE
   CYCLE
   GOTO
   PROCEDURE
   RECURSIVE
   SELECT
   STOP
   TYPE
   PERCENT
   CONCAT
   PASSIGNMENT
   IFX
   EQV
   NEQV
   OR
   AND
   NOT
   EXP


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 program: PROGRAM ID $@1 decls declF $@2 stmts END PROGRAM ID $@3 subprogram

    5 $@4: %empty

    6 $@5: %empty

    7 $@6: %empty

    8 $@7: %empty

    9 subprogram: SUBROUTINE ID $@4 '(' idn ')' $@5 decls $@6 stmts END SUBROUTINE ID $@7 subprogram

   10 $@8: %empty

   11 $@9: %empty

   12 $@10: %empty

   13 $@11: %empty

   14 subprogram: FUNCTION ID $@8 '(' idn ')' $@9 decls $@10 stmts END FUNCTION ID $@11 subprogram
   15           | %empty

   16 decls: declVar decls
   17      | optionGlob decls
   18      | optionInit decls
   19      | optionDecl decls
   20      | %empty

   21 declVar: types ids
   22        | types CCOLON ids
   23        | types ',' fAttr sAttr CCOLON ids

   24 $@12: %empty

   25 optionGlob: COMMON $@12 '/' ids '/'

   26 optionInit: DATA '/' ID '/' value

   27 optionDecl: PARAMETER '(' ID '=' value ')'

   28 value: INTEGERC
   29      | REALC
   30      | CHARC
   31      | LOGICALC

   32 declF: INTERFACE declFunc END INTERFACE
   33      | %empty

   34 $@13: %empty

   35 $@14: %empty

   36 $@15: %empty

   37 declFunc: SUBROUTINE ID $@13 '(' idn ')' $@14 decls END SUBROUTINE ID $@15 declFunc

   38 $@16: %empty

   39 $@17: %empty

   40 $@18: %empty

   41 declFunc: FUNCTION ID $@16 '(' idn ')' $@17 decls END FUNCTION ID $@18 declFunc
   42         | %empty

   43 stmts: assignStmt stmts
   44      | printStmt stmts
   45      | loopStmt stmts
   46      | ifStmt stmts
   47      | RETURN stmts
   48      | EXIT stmts

   49 $@19: %empty

   50 $@20: %empty

   51 stmts: CALL ID $@19 '(' idn ')' $@20 stmts

   52 $@21: %empty

   53 stmts: READ ID $@21 stmts
   54      | %empty

   55 $@22: %empty

   56 printStmt: PRINT $@22 expr

   57 $@23: %empty

   58 printStmt: PRINTLN $@23 expr

   59 assignStmt: ID '=' expr

   60 $@24: %empty

   61 assignStmt: ID '[' expr ']' $@24 '=' expr

   62 $@25: %empty

   63 $@26: %empty

   64 $@27: %empty

   65 loopStmt: DO $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO

   66 $@28: %empty

   67 ifStmt: IF '(' expr ')' $@28 condition1 END IF

   68 condition1: THEN stmts condition2
   69           | stmts

   70 $@29: %empty

   71 condition2: ELSE $@29 stmts
   72           | %empty

   73 types: INTEGER
   74      | REAL
   75      | LOGICAL
   76      | CHARACTER

   77 idn: ids
   78    | %empty

   79 ids: ids ',' ID
   80    | ID

   81 fAttr: DIMENSION '(' INTEGERC ')'
   82      | DIMENSION '(' error ')'
   83      | POINTER
   84      | PARAMETER

   85 sAttr: ',' POINTER
   86      | %empty

   87 expr: expr '+' expr
   88     | expr '-' expr
   89     | expr '*' expr
   90     | expr '/' expr
   91     | '-' expr
   92     | expr GT expr
   93     | expr GE expr
   94     | expr LT expr
   95     | expr LE expr
   96     | expr EQ expr
   97     | expr NE expr

   98 $@30: %empty

   99 expr: ID $@30 funcCondition
  100     | INTEGERC
  101     | REALC
  102     | CHARC
  103     | LOGICALC
  104     | STRINGC

  105 funcCondition: '(' funcPara ')'
  106              | %empty

  107 funcPara: funcPara ',' opt_val
  108         | opt_val
  109         | %empty

  110 opt_val: INTEGERC
  111        | REALC
  112        | ID

  113 optionExpr: ',' INTEGERC
  114           | ',' ID
  115           | %empty


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 14 27 37 41 51 67 81 82 105
')' (41) 9 14 27 37 41 51 67 81 82 105
'*' (42) 89
'+' (43) 87
',' (44) 23 65 79 85 107 113 114
'-' (45) 88 91
'/' (47) 25 26 90
'=' (61) 27 59 61
'[' (91) 61
']' (93) 61
error (256) 82
INTEGERC (258) 28 81 100 110 113
REALC (259) 29 101 111
CHARC (260) 30 102
LOGICALC (261) 31 103
ID (262) 4 9 14 26 27 37 41 51 53 59 61 79 80 99 112 114
STRINGC (263) 104
LPARENTHESIS (264)
RPARENTHESIS (265)
COMMA (266)
COLON (267)
CCOLON (268) 22 23
SEMICOLON (269)
LBRACKET (270)
RBRACKET (271)
LBRACE (272)
RBRACE (273)
INTEGER (274) 73
REAL (275) 74
LOGICAL (276) 75
CHARACTER (277) 76
CALL (278) 51
CASE (279)
CLOSE (280)
CONTINUE (281)
CYCLE (282)
DATA (283) 26
DIMENSION (284) 81 82
DO (285) 65
END (286) 4 9 14 32 37 41 65 67
EXIT (287) 48
FUNCTION (288) 14 41
GOTO (289)
PROCEDURE (290)
PARAMETER (291) 27 84
PRINT (292) 56
PRINTLN (293) 58
POINTER (294) 83 85
PROGRAM (295) 4
RECURSIVE (296)
RETURN (297) 47
SELECT (298)
STOP (299)
SUBROUTINE (300) 9 37
TYPE (301)
PERCENT (302)
CONCAT (303)
PASSIGNMENT (304)
INTERFACE (305) 32
THEN (306) 68
IF (307) 67
READ (308) 53
COMMON (309) 25
IFX (310)
ELSE (311) 71
EQV (312)
NEQV (313)
OR (314)
AND (315)
NOT (316)
LT (317) 94
LE (318) 95
GE (319) 93
GT (320) 92
EQ (321) 96
NE (322) 97
EXP (323)
UMINUS (324)


Nonterminals, with rules where they appear

$accept (80)
    on left: 0
program (81)
    on left: 4, on right: 0
$@1 (82)
    on left: 1, on right: 4
$@2 (83)
    on left: 2, on right: 4
$@3 (84)
    on left: 3, on right: 4
subprogram (85)
    on left: 9 14 15, on right: 4 9 14
$@4 (86)
    on left: 5, on right: 9
$@5 (87)
    on left: 6, on right: 9
$@6 (88)
    on left: 7, on right: 9
$@7 (89)
    on left: 8, on right: 9
$@8 (90)
    on left: 10, on right: 14
$@9 (91)
    on left: 11, on right: 14
$@10 (92)
    on left: 12, on right: 14
$@11 (93)
    on left: 13, on right: 14
decls (94)
    on left: 16 17 18 19 20, on right: 4 9 14 16 17 18 19 37 41
declVar (95)
    on left: 21 22 23, on right: 16
optionGlob (96)
    on left: 25, on right: 17
$@12 (97)
    on left: 24, on right: 25
optionInit (98)
    on left: 26, on right: 18
optionDecl (99)
    on left: 27, on right: 19
value (100)
    on left: 28 29 30 31, on right: 26 27
declF (101)
    on left: 32 33, on right: 4
declFunc (102)
    on left: 37 41 42, on right: 32 37 41
$@13 (103)
    on left: 34, on right: 37
$@14 (104)
    on left: 35, on right: 37
$@15 (105)
    on left: 36, on right: 37
$@16 (106)
    on left: 38, on right: 41
$@17 (107)
    on left: 39, on right: 41
$@18 (108)
    on left: 40, on right: 41
stmts (109)
    on left: 43 44 45 46 47 48 51 53 54, on right: 4 9 14 43 44 45
    46 47 48 51 53 65 68 69 71
$@19 (110)
    on left: 49, on right: 51
$@20 (111)
    on left: 50, on right: 51
$@21 (112)
    on left: 52, on right: 53
printStmt (113)
    on left: 56 58, on right: 44
$@22 (114)
    on left: 55, on right: 56
$@23 (115)
    on left: 57, on right: 58
assignStmt (116)
    on left: 59 61, on right: 43 65
$@24 (117)
    on left: 60, on right: 61
loopStmt (118)
    on left: 65, on right: 45
$@25 (119)
    on left: 62, on right: 65
$@26 (120)
    on left: 63, on right: 65
$@27 (121)
    on left: 64, on right: 65
ifStmt (122)
    on left: 67, on right: 46
$@28 (123)
    on left: 66, on right: 67
condition1 (124)
    on left: 68 69, on right: 67
condition2 (125)
    on left: 71 72, on right: 68
$@29 (126)
    on left: 70, on right: 71
types (127)
    on left: 73 74 75 76, on right: 21 22 23
idn (128)
    on left: 77 78, on right: 9 14 37 41 51
ids (129)
    on left: 79 80, on right: 21 22 23 25 77 79
fAttr (130)
    on left: 81 82 83 84, on right: 23
sAttr (131)
    on left: 85 86, on right: 23
expr (132)
    on left: 87 88 89 90 91 92 93 94 95 96 97 99 100 101 102 103 104,
    on right: 56 58 59 61 65 67 87 88 89 90 91 92 93 94 95 96 97
$@30 (133)
    on left: 98, on right: 99
funcCondition (134)
    on left: 105 106, on right: 99
funcPara (135)
    on left: 107 108 109, on right: 105 107
opt_val (136)
    on left: 110 111 112, on right: 107 108
optionExpr (137)
    on left: 113 114 115, on right: 65


State 0

    0 $accept: . program $end
    4 program: . PROGRAM ID $@1 decls declF $@2 stmts END PROGRAM ID $@3 subprogram

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    4 program: PROGRAM . ID $@1 decls declF $@2 stmts END PROGRAM ID $@3 subprogram

    ID  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 $@1: . %empty
    4 program: PROGRAM ID . $@1 decls declF $@2 stmts END PROGRAM ID $@3 subprogram

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    4 program: PROGRAM ID $@1 . decls declF $@2 stmts END PROGRAM ID $@3 subprogram
   16 decls: . declVar decls
   17      | . optionGlob decls
   18      | . optionInit decls
   19      | . optionDecl decls
   20      | . %empty  [ID, CALL, DO, END, EXIT, PRINT, PRINTLN, RETURN, INTERFACE, IF, READ]
   21 declVar: . types ids
   22        | . types CCOLON ids
   23        | . types ',' fAttr sAttr CCOLON ids
   25 optionGlob: . COMMON $@12 '/' ids '/'
   26 optionInit: . DATA '/' ID '/' value
   27 optionDecl: . PARAMETER '(' ID '=' value ')'
   73 types: . INTEGER
   74      | . REAL
   75      | . LOGICAL
   76      | . CHARACTER

    INTEGER    shift, and go to state 6
    REAL       shift, and go to state 7
    LOGICAL    shift, and go to state 8
    CHARACTER  shift, and go to state 9
    DATA       shift, and go to state 10
    PARAMETER  shift, and go to state 11
    COMMON     shift, and go to state 12

    $default  reduce using rule 20 (decls)

    decls       go to state 13
    declVar     go to state 14
    optionGlob  go to state 15
    optionInit  go to state 16
    optionDecl  go to state 17
    types       go to state 18


State 6

   73 types: INTEGER .

    $default  reduce using rule 73 (types)


State 7

   74 types: REAL .

    $default  reduce using rule 74 (types)


State 8

   75 types: LOGICAL .

    $default  reduce using rule 75 (types)


State 9

   76 types: CHARACTER .

    $default  reduce using rule 76 (types)


State 10

   26 optionInit: DATA . '/' ID '/' value

    '/'  shift, and go to state 19


State 11

   27 optionDecl: PARAMETER . '(' ID '=' value ')'

    '('  shift, and go to state 20


State 12

   24 $@12: . %empty
   25 optionGlob: COMMON . $@12 '/' ids '/'

    $default  reduce using rule 24 ($@12)

    $@12  go to state 21


State 13

    4 program: PROGRAM ID $@1 decls . declF $@2 stmts END PROGRAM ID $@3 subprogram
   32 declF: . INTERFACE declFunc END INTERFACE
   33      | . %empty  [ID, CALL, DO, END, EXIT, PRINT, PRINTLN, RETURN, IF, READ]

    INTERFACE  shift, and go to state 22

    $default  reduce using rule 33 (declF)

    declF  go to state 23


State 14

   16 decls: . declVar decls
   16      | declVar . decls
   17      | . optionGlob decls
   18      | . optionInit decls
   19      | . optionDecl decls
   20      | . %empty  [ID, CALL, DO, END, EXIT, PRINT, PRINTLN, RETURN, INTERFACE, IF, READ]
   21 declVar: . types ids
   22        | . types CCOLON ids
   23        | . types ',' fAttr sAttr CCOLON ids
   25 optionGlob: . COMMON $@12 '/' ids '/'
   26 optionInit: . DATA '/' ID '/' value
   27 optionDecl: . PARAMETER '(' ID '=' value ')'
   73 types: . INTEGER
   74      | . REAL
   75      | . LOGICAL
   76      | . CHARACTER

    INTEGER    shift, and go to state 6
    REAL       shift, and go to state 7
    LOGICAL    shift, and go to state 8
    CHARACTER  shift, and go to state 9
    DATA       shift, and go to state 10
    PARAMETER  shift, and go to state 11
    COMMON     shift, and go to state 12

    $default  reduce using rule 20 (decls)

    decls       go to state 24
    declVar     go to state 14
    optionGlob  go to state 15
    optionInit  go to state 16
    optionDecl  go to state 17
    types       go to state 18


State 15

   16 decls: . declVar decls
   17      | . optionGlob decls
   17      | optionGlob . decls
   18      | . optionInit decls
   19      | . optionDecl decls
   20      | . %empty  [ID, CALL, DO, END, EXIT, PRINT, PRINTLN, RETURN, INTERFACE, IF, READ]
   21 declVar: . types ids
   22        | . types CCOLON ids
   23        | . types ',' fAttr sAttr CCOLON ids
   25 optionGlob: . COMMON $@12 '/' ids '/'
   26 optionInit: . DATA '/' ID '/' value
   27 optionDecl: . PARAMETER '(' ID '=' value ')'
   73 types: . INTEGER
   74      | . REAL
   75      | . LOGICAL
   76      | . CHARACTER

    INTEGER    shift, and go to state 6
    REAL       shift, and go to state 7
    LOGICAL    shift, and go to state 8
    CHARACTER  shift, and go to state 9
    DATA       shift, and go to state 10
    PARAMETER  shift, and go to state 11
    COMMON     shift, and go to state 12

    $default  reduce using rule 20 (decls)

    decls       go to state 25
    declVar     go to state 14
    optionGlob  go to state 15
    optionInit  go to state 16
    optionDecl  go to state 17
    types       go to state 18


State 16

   16 decls: . declVar decls
   17      | . optionGlob decls
   18      | . optionInit decls
   18      | optionInit . decls
   19      | . optionDecl decls
   20      | . %empty  [ID, CALL, DO, END, EXIT, PRINT, PRINTLN, RETURN, INTERFACE, IF, READ]
   21 declVar: . types ids
   22        | . types CCOLON ids
   23        | . types ',' fAttr sAttr CCOLON ids
   25 optionGlob: . COMMON $@12 '/' ids '/'
   26 optionInit: . DATA '/' ID '/' value
   27 optionDecl: . PARAMETER '(' ID '=' value ')'
   73 types: . INTEGER
   74      | . REAL
   75      | . LOGICAL
   76      | . CHARACTER

    INTEGER    shift, and go to state 6
    REAL       shift, and go to state 7
    LOGICAL    shift, and go to state 8
    CHARACTER  shift, and go to state 9
    DATA       shift, and go to state 10
    PARAMETER  shift, and go to state 11
    COMMON     shift, and go to state 12

    $default  reduce using rule 20 (decls)

    decls       go to state 26
    declVar     go to state 14
    optionGlob  go to state 15
    optionInit  go to state 16
    optionDecl  go to state 17
    types       go to state 18


State 17

   16 decls: . declVar decls
   17      | . optionGlob decls
   18      | . optionInit decls
   19      | . optionDecl decls
   19      | optionDecl . decls
   20      | . %empty  [ID, CALL, DO, END, EXIT, PRINT, PRINTLN, RETURN, INTERFACE, IF, READ]
   21 declVar: . types ids
   22        | . types CCOLON ids
   23        | . types ',' fAttr sAttr CCOLON ids
   25 optionGlob: . COMMON $@12 '/' ids '/'
   26 optionInit: . DATA '/' ID '/' value
   27 optionDecl: . PARAMETER '(' ID '=' value ')'
   73 types: . INTEGER
   74      | . REAL
   75      | . LOGICAL
   76      | . CHARACTER

    INTEGER    shift, and go to state 6
    REAL       shift, and go to state 7
    LOGICAL    shift, and go to state 8
    CHARACTER  shift, and go to state 9
    DATA       shift, and go to state 10
    PARAMETER  shift, and go to state 11
    COMMON     shift, and go to state 12

    $default  reduce using rule 20 (decls)

    decls       go to state 27
    declVar     go to state 14
    optionGlob  go to state 15
    optionInit  go to state 16
    optionDecl  go to state 17
    types       go to state 18


State 18

   21 declVar: types . ids
   22        | types . CCOLON ids
   23        | types . ',' fAttr sAttr CCOLON ids
   79 ids: . ids ',' ID
   80    | . ID

    ID      shift, and go to state 28
    CCOLON  shift, and go to state 29
    ','     shift, and go to state 30

    ids  go to state 31


State 19

   26 optionInit: DATA '/' . ID '/' value

    ID  shift, and go to state 32


State 20

   27 optionDecl: PARAMETER '(' . ID '=' value ')'

    ID  shift, and go to state 33


State 21

   25 optionGlob: COMMON $@12 . '/' ids '/'

    '/'  shift, and go to state 34


State 22

   32 declF: INTERFACE . declFunc END INTERFACE
   37 declFunc: . SUBROUTINE ID $@13 '(' idn ')' $@14 decls END SUBROUTINE ID $@15 declFunc
   41         | . FUNCTION ID $@16 '(' idn ')' $@17 decls END FUNCTION ID $@18 declFunc
   42         | . %empty  [END]

    FUNCTION    shift, and go to state 35
    SUBROUTINE  shift, and go to state 36

    $default  reduce using rule 42 (declFunc)

    declFunc  go to state 37


State 23

    2 $@2: . %empty
    4 program: PROGRAM ID $@1 decls declF . $@2 stmts END PROGRAM ID $@3 subprogram

    $default  reduce using rule 2 ($@2)

    $@2  go to state 38


State 24

   16 decls: declVar decls .

    $default  reduce using rule 16 (decls)


State 25

   17 decls: optionGlob decls .

    $default  reduce using rule 17 (decls)


State 26

   18 decls: optionInit decls .

    $default  reduce using rule 18 (decls)


State 27

   19 decls: optionDecl decls .

    $default  reduce using rule 19 (decls)


State 28

   80 ids: ID .

    $default  reduce using rule 80 (ids)


State 29

   22 declVar: types CCOLON . ids
   79 ids: . ids ',' ID
   80    | . ID

    ID  shift, and go to state 28

    ids  go to state 39


State 30

   23 declVar: types ',' . fAttr sAttr CCOLON ids
   81 fAttr: . DIMENSION '(' INTEGERC ')'
   82      | . DIMENSION '(' error ')'
   83      | . POINTER
   84      | . PARAMETER

    DIMENSION  shift, and go to state 40
    PARAMETER  shift, and go to state 41
    POINTER    shift, and go to state 42

    fAttr  go to state 43


State 31

   21 declVar: types ids .  [ID, INTEGER, REAL, LOGICAL, CHARACTER, CALL, DATA, DO, END, EXIT, PARAMETER, PRINT, PRINTLN, RETURN, INTERFACE, IF, READ, COMMON]
   79 ids: ids . ',' ID

    ','  shift, and go to state 44

    $default  reduce using rule 21 (declVar)


State 32

   26 optionInit: DATA '/' ID . '/' value

    '/'  shift, and go to state 45


State 33

   27 optionDecl: PARAMETER '(' ID . '=' value ')'

    '='  shift, and go to state 46


State 34

   25 optionGlob: COMMON $@12 '/' . ids '/'
   79 ids: . ids ',' ID
   80    | . ID

    ID  shift, and go to state 28

    ids  go to state 47


State 35

   41 declFunc: FUNCTION . ID $@16 '(' idn ')' $@17 decls END FUNCTION ID $@18 declFunc

    ID  shift, and go to state 48


State 36

   37 declFunc: SUBROUTINE . ID $@13 '(' idn ')' $@14 decls END SUBROUTINE ID $@15 declFunc

    ID  shift, and go to state 49


State 37

   32 declF: INTERFACE declFunc . END INTERFACE

    END  shift, and go to state 50


State 38

    4 program: PROGRAM ID $@1 decls declF $@2 . stmts END PROGRAM ID $@3 subprogram
   43 stmts: . assignStmt stmts
   44      | . printStmt stmts
   45      | . loopStmt stmts
   46      | . ifStmt stmts
   47      | . RETURN stmts
   48      | . EXIT stmts
   51      | . CALL ID $@19 '(' idn ')' $@20 stmts
   53      | . READ ID $@21 stmts
   54      | . %empty  [END]
   56 printStmt: . PRINT $@22 expr
   58          | . PRINTLN $@23 expr
   59 assignStmt: . ID '=' expr
   61           | . ID '[' expr ']' $@24 '=' expr
   65 loopStmt: . DO $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO
   67 ifStmt: . IF '(' expr ')' $@28 condition1 END IF

    ID       shift, and go to state 51
    CALL     shift, and go to state 52
    DO       shift, and go to state 53
    EXIT     shift, and go to state 54
    PRINT    shift, and go to state 55
    PRINTLN  shift, and go to state 56
    RETURN   shift, and go to state 57
    IF       shift, and go to state 58
    READ     shift, and go to state 59

    $default  reduce using rule 54 (stmts)

    stmts       go to state 60
    printStmt   go to state 61
    assignStmt  go to state 62
    loopStmt    go to state 63
    ifStmt      go to state 64


State 39

   22 declVar: types CCOLON ids .  [ID, INTEGER, REAL, LOGICAL, CHARACTER, CALL, DATA, DO, END, EXIT, PARAMETER, PRINT, PRINTLN, RETURN, INTERFACE, IF, READ, COMMON]
   79 ids: ids . ',' ID

    ','  shift, and go to state 44

    $default  reduce using rule 22 (declVar)


State 40

   81 fAttr: DIMENSION . '(' INTEGERC ')'
   82      | DIMENSION . '(' error ')'

    '('  shift, and go to state 65


State 41

   84 fAttr: PARAMETER .

    $default  reduce using rule 84 (fAttr)


State 42

   83 fAttr: POINTER .

    $default  reduce using rule 83 (fAttr)


State 43

   23 declVar: types ',' fAttr . sAttr CCOLON ids
   85 sAttr: . ',' POINTER
   86      | . %empty  [CCOLON]

    ','  shift, and go to state 66

    $default  reduce using rule 86 (sAttr)

    sAttr  go to state 67


State 44

   79 ids: ids ',' . ID

    ID  shift, and go to state 68


State 45

   26 optionInit: DATA '/' ID '/' . value
   28 value: . INTEGERC
   29      | . REALC
   30      | . CHARC
   31      | . LOGICALC

    INTEGERC  shift, and go to state 69
    REALC     shift, and go to state 70
    CHARC     shift, and go to state 71
    LOGICALC  shift, and go to state 72

    value  go to state 73


State 46

   27 optionDecl: PARAMETER '(' ID '=' . value ')'
   28 value: . INTEGERC
   29      | . REALC
   30      | . CHARC
   31      | . LOGICALC

    INTEGERC  shift, and go to state 69
    REALC     shift, and go to state 70
    CHARC     shift, and go to state 71
    LOGICALC  shift, and go to state 72

    value  go to state 74


State 47

   25 optionGlob: COMMON $@12 '/' ids . '/'
   79 ids: ids . ',' ID

    '/'  shift, and go to state 75
    ','  shift, and go to state 44


State 48

   38 $@16: . %empty
   41 declFunc: FUNCTION ID . $@16 '(' idn ')' $@17 decls END FUNCTION ID $@18 declFunc

    $default  reduce using rule 38 ($@16)

    $@16  go to state 76


State 49

   34 $@13: . %empty
   37 declFunc: SUBROUTINE ID . $@13 '(' idn ')' $@14 decls END SUBROUTINE ID $@15 declFunc

    $default  reduce using rule 34 ($@13)

    $@13  go to state 77


State 50

   32 declF: INTERFACE declFunc END . INTERFACE

    INTERFACE  shift, and go to state 78


State 51

   59 assignStmt: ID . '=' expr
   61           | ID . '[' expr ']' $@24 '=' expr

    '='  shift, and go to state 79
    '['  shift, and go to state 80


State 52

   51 stmts: CALL . ID $@19 '(' idn ')' $@20 stmts

    ID  shift, and go to state 81


State 53

   62 $@25: . %empty
   65 loopStmt: DO . $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO

    $default  reduce using rule 62 ($@25)

    $@25  go to state 82


State 54

   43 stmts: . assignStmt stmts
   44      | . printStmt stmts
   45      | . loopStmt stmts
   46      | . ifStmt stmts
   47      | . RETURN stmts
   48      | . EXIT stmts
   48      | EXIT . stmts
   51      | . CALL ID $@19 '(' idn ')' $@20 stmts
   53      | . READ ID $@21 stmts
   54      | . %empty  [END, ELSE]
   56 printStmt: . PRINT $@22 expr
   58          | . PRINTLN $@23 expr
   59 assignStmt: . ID '=' expr
   61           | . ID '[' expr ']' $@24 '=' expr
   65 loopStmt: . DO $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO
   67 ifStmt: . IF '(' expr ')' $@28 condition1 END IF

    ID       shift, and go to state 51
    CALL     shift, and go to state 52
    DO       shift, and go to state 53
    EXIT     shift, and go to state 54
    PRINT    shift, and go to state 55
    PRINTLN  shift, and go to state 56
    RETURN   shift, and go to state 57
    IF       shift, and go to state 58
    READ     shift, and go to state 59

    $default  reduce using rule 54 (stmts)

    stmts       go to state 83
    printStmt   go to state 61
    assignStmt  go to state 62
    loopStmt    go to state 63
    ifStmt      go to state 64


State 55

   55 $@22: . %empty
   56 printStmt: PRINT . $@22 expr

    $default  reduce using rule 55 ($@22)

    $@22  go to state 84


State 56

   57 $@23: . %empty
   58 printStmt: PRINTLN . $@23 expr

    $default  reduce using rule 57 ($@23)

    $@23  go to state 85


State 57

   43 stmts: . assignStmt stmts
   44      | . printStmt stmts
   45      | . loopStmt stmts
   46      | . ifStmt stmts
   47      | . RETURN stmts
   47      | RETURN . stmts
   48      | . EXIT stmts
   51      | . CALL ID $@19 '(' idn ')' $@20 stmts
   53      | . READ ID $@21 stmts
   54      | . %empty  [END, ELSE]
   56 printStmt: . PRINT $@22 expr
   58          | . PRINTLN $@23 expr
   59 assignStmt: . ID '=' expr
   61           | . ID '[' expr ']' $@24 '=' expr
   65 loopStmt: . DO $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO
   67 ifStmt: . IF '(' expr ')' $@28 condition1 END IF

    ID       shift, and go to state 51
    CALL     shift, and go to state 52
    DO       shift, and go to state 53
    EXIT     shift, and go to state 54
    PRINT    shift, and go to state 55
    PRINTLN  shift, and go to state 56
    RETURN   shift, and go to state 57
    IF       shift, and go to state 58
    READ     shift, and go to state 59

    $default  reduce using rule 54 (stmts)

    stmts       go to state 86
    printStmt   go to state 61
    assignStmt  go to state 62
    loopStmt    go to state 63
    ifStmt      go to state 64


State 58

   67 ifStmt: IF . '(' expr ')' $@28 condition1 END IF

    '('  shift, and go to state 87


State 59

   53 stmts: READ . ID $@21 stmts

    ID  shift, and go to state 88


State 60

    4 program: PROGRAM ID $@1 decls declF $@2 stmts . END PROGRAM ID $@3 subprogram

    END  shift, and go to state 89


State 61

   43 stmts: . assignStmt stmts
   44      | . printStmt stmts
   44      | printStmt . stmts
   45      | . loopStmt stmts
   46      | . ifStmt stmts
   47      | . RETURN stmts
   48      | . EXIT stmts
   51      | . CALL ID $@19 '(' idn ')' $@20 stmts
   53      | . READ ID $@21 stmts
   54      | . %empty  [END, ELSE]
   56 printStmt: . PRINT $@22 expr
   58          | . PRINTLN $@23 expr
   59 assignStmt: . ID '=' expr
   61           | . ID '[' expr ']' $@24 '=' expr
   65 loopStmt: . DO $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO
   67 ifStmt: . IF '(' expr ')' $@28 condition1 END IF

    ID       shift, and go to state 51
    CALL     shift, and go to state 52
    DO       shift, and go to state 53
    EXIT     shift, and go to state 54
    PRINT    shift, and go to state 55
    PRINTLN  shift, and go to state 56
    RETURN   shift, and go to state 57
    IF       shift, and go to state 58
    READ     shift, and go to state 59

    $default  reduce using rule 54 (stmts)

    stmts       go to state 90
    printStmt   go to state 61
    assignStmt  go to state 62
    loopStmt    go to state 63
    ifStmt      go to state 64


State 62

   43 stmts: . assignStmt stmts
   43      | assignStmt . stmts
   44      | . printStmt stmts
   45      | . loopStmt stmts
   46      | . ifStmt stmts
   47      | . RETURN stmts
   48      | . EXIT stmts
   51      | . CALL ID $@19 '(' idn ')' $@20 stmts
   53      | . READ ID $@21 stmts
   54      | . %empty  [END, ELSE]
   56 printStmt: . PRINT $@22 expr
   58          | . PRINTLN $@23 expr
   59 assignStmt: . ID '=' expr
   61           | . ID '[' expr ']' $@24 '=' expr
   65 loopStmt: . DO $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO
   67 ifStmt: . IF '(' expr ')' $@28 condition1 END IF

    ID       shift, and go to state 51
    CALL     shift, and go to state 52
    DO       shift, and go to state 53
    EXIT     shift, and go to state 54
    PRINT    shift, and go to state 55
    PRINTLN  shift, and go to state 56
    RETURN   shift, and go to state 57
    IF       shift, and go to state 58
    READ     shift, and go to state 59

    $default  reduce using rule 54 (stmts)

    stmts       go to state 91
    printStmt   go to state 61
    assignStmt  go to state 62
    loopStmt    go to state 63
    ifStmt      go to state 64


State 63

   43 stmts: . assignStmt stmts
   44      | . printStmt stmts
   45      | . loopStmt stmts
   45      | loopStmt . stmts
   46      | . ifStmt stmts
   47      | . RETURN stmts
   48      | . EXIT stmts
   51      | . CALL ID $@19 '(' idn ')' $@20 stmts
   53      | . READ ID $@21 stmts
   54      | . %empty  [END, ELSE]
   56 printStmt: . PRINT $@22 expr
   58          | . PRINTLN $@23 expr
   59 assignStmt: . ID '=' expr
   61           | . ID '[' expr ']' $@24 '=' expr
   65 loopStmt: . DO $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO
   67 ifStmt: . IF '(' expr ')' $@28 condition1 END IF

    ID       shift, and go to state 51
    CALL     shift, and go to state 52
    DO       shift, and go to state 53
    EXIT     shift, and go to state 54
    PRINT    shift, and go to state 55
    PRINTLN  shift, and go to state 56
    RETURN   shift, and go to state 57
    IF       shift, and go to state 58
    READ     shift, and go to state 59

    $default  reduce using rule 54 (stmts)

    stmts       go to state 92
    printStmt   go to state 61
    assignStmt  go to state 62
    loopStmt    go to state 63
    ifStmt      go to state 64


State 64

   43 stmts: . assignStmt stmts
   44      | . printStmt stmts
   45      | . loopStmt stmts
   46      | . ifStmt stmts
   46      | ifStmt . stmts
   47      | . RETURN stmts
   48      | . EXIT stmts
   51      | . CALL ID $@19 '(' idn ')' $@20 stmts
   53      | . READ ID $@21 stmts
   54      | . %empty  [END, ELSE]
   56 printStmt: . PRINT $@22 expr
   58          | . PRINTLN $@23 expr
   59 assignStmt: . ID '=' expr
   61           | . ID '[' expr ']' $@24 '=' expr
   65 loopStmt: . DO $@25 assignStmt $@26 ',' expr $@27 optionExpr stmts END DO
   67 ifStmt: . IF '(' expr ')' $@28 condition1 END IF

    ID       shift, and go to state 51
    CALL     shift, and go to state 52
    DO       shift, and go to state 53
    EXIT     shift, and go to state 54
    PRINT    shift, and go to state 55
    PRINTLN  shift, and go to state 56
    RETURN   shift, and go to state 57
    IF       shift, and go to state 58
    READ     shift, and go to state 59

    $default  reduce using rule 54 (stmts)

    stmts       go to state 93
    printStmt   go to state 61
    assignStmt  go to state 62
    loopStmt    go to state 63
    ifStmt      go to state 64


State 65

   81 fAttr: DIMENSION '(' . INTEGERC ')'
   82      | DIMENSION '(' . error ')'

    error     shift, and go to state 94
    INTEGERC  shift, and go to state 95


State 66

   85 sAttr: ',' . POINTER

    POINTER  shift, and go to state 96


State 67

   23 declVar: types ',' fAttr sAttr . CCOLON ids

    CCOLON  shift, and go to state 97


State 68

   79 ids: ids ',' ID .

    $default  reduce using rule 79 (ids)


State 69

   28 value: INTEGERC .

    $default  reduce using rule 28 (value)


State 70

   29 value: REALC .

    $default  reduce using rule 29 (value)


State 71

   30 value: CHARC .

    $default  reduce using rule 30 (value)


State 72

   31 value: LOGICALC .

    $default  reduce using rule 31 (value)


State 73

   26 optionInit: DATA '/' ID '/' value .

    $default  reduce using rule 26 (optionInit)


State 74

   27 optionDecl: PARAMETER '(' ID '=' value . ')'

    ')'  shift, and go to state 98


State 75

   25 optionGlob: COMMON $@12 '/' ids '/' .
